force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_SOSP__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_SOSP__c</fullName>
    <description>X_DATA_SOSP</description>
    <externalDeveloperName>X_DATA_SOSP</externalDeveloperName>
    <label>Data Sospensione</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>