force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_TENTATIVI__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_TENTATIVI__c</fullName>
    <description>X_DATA_TENTATIVI</description>
    <externalDeveloperName>X_DATA_TENTATIVI</externalDeveloperName>
    <label>Data Tentativi</label>
    <type>DateTime</type>
</CustomField>