force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_ULT_SOSP__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_ULT_SOSP__c</fullName>
    <description>X_DATA_ULT_SOSP</description>
    <externalDeveloperName>X_DATA_ULT_SOSP</externalDeveloperName>
    <label>Data Ultima Sosp</label>
    <type>DateTime</type>
</CustomField>