force-app/main/default/objects/SiebelRdo__x/fields/X_DATI_FATT__c.field-meta.xml
<CustomField>
    <fullName>X_DATI_FATT__c</fullName>
    <description>X_DATI_FATT</description>
    <externalDeveloperName>X_DATI_FATT</externalDeveloperName>
    <label>Dati Fatt</label>
    <type>DateTime</type>
</CustomField>