force-app/main/default/objects/SiebelRdo__x/fields/X_DEP_CAUZ_AD__c.field-meta.xml
<CustomField>
    <fullName>X_DEP_CAUZ_AD__c</fullName>
    <description>X_DEP_CAUZ_AD</description>
    <externalDeveloperName>X_DEP_CAUZ_AD</externalDeveloperName>
    <label>CP Dep Cauz AD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>