force-app/main/default/objects/SiebelRdo__x/fields/X_DESC_FASCIA_CONSUMO__c.field-meta.xml
<CustomField>
    <fullName>X_DESC_FASCIA_CONSUMO__c</fullName>
    <description>X_DESC_FASCIA_CONSUMO</description>
    <externalDeveloperName>X_DESC_FASCIA_CONSUMO</externalDeveloperName>
    <label>Desc Fascia Consumo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>