force-app/main/default/objects/SiebelRdo__x/fields/X_DESCR_ERRORE__c.field-meta.xml
<CustomField>
    <fullName>X_DESCR_ERRORE__c</fullName>
    <description>X_DESCR_ERRORE</description>
    <externalDeveloperName>X_DESCR_ERRORE</externalDeveloperName>
    <label>Descrizione Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>