force-app/main/default/objects/SiebelRdo__x/fields/X_DISALIMENT__c.field-meta.xml
<CustomField>
    <fullName>X_DISALIMENT__c</fullName>
    <description>X_DISALIMENT</description>
    <externalDeveloperName>X_DISALIMENT</externalDeveloperName>
    <label>Disalimentato</label>
    <length>30</length>
    <type>Text</type>
</CustomField>