force-app/main/default/objects/SiebelRdo__x/fields/X_DISTANZA_CABINA__c.field-meta.xml
<CustomField>
    <fullName>X_DISTANZA_CABINA__c</fullName>
    <description>X_DISTANZA_CABINA</description>
    <externalDeveloperName>X_DISTANZA_CABINA</externalDeveloperName>
    <label>Distanza Cabina</label>
    <length>30</length>
    <type>Text</type>
</CustomField>