force-app/main/default/objects/SiebelRdo__x/fields/X_DISTRIB_NEW__c.field-meta.xml
<CustomField>
    <fullName>X_DISTRIB_NEW__c</fullName>
    <description>X_DISTRIB_NEW</description>
    <externalDeveloperName>X_DISTRIB_NEW</externalDeveloperName>
    <label>Distributore New</label>
    <length>30</length>
    <type>Text</type>
</CustomField>