force-app/main/default/objects/SiebelRdo__x/fields/X_DOC_DISC__c.field-meta.xml
<CustomField>
    <fullName>X_DOC_DISC__c</fullName>
    <description>X_DOC_DISC</description>
    <externalDeveloperName>X_DOC_DISC</externalDeveloperName>
    <label>Doc Disconnessione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>