force-app/main/default/objects/SiebelRdo__x/fields/X_DT_PAGAM_CLI_MOROSO__c.field-meta.xml
<CustomField>
    <fullName>X_DT_PAGAM_CLI_MOROSO__c</fullName>
    <description>X_DT_PAGAM_CLI_MOROSO</description>
    <externalDeveloperName>X_DT_PAGAM_CLI_MOROSO</externalDeveloperName>
    <label>Data Pagamento Cliente Moroso</label>
    <type>DateTime</type>
</CustomField>