force-app/main/default/objects/SiebelRdo__x/fields/X_DT_RIDUZIONE_POTENZA__c.field-meta.xml
<CustomField>
    <fullName>X_DT_RIDUZIONE_POTENZA__c</fullName>
    <label>Data Riduzione Potenza</label>
    <length>15</length>
    <type>Text</type>
</CustomField>