force-app/main/default/objects/SiebelRdo__x/fields/X_DT_VERIFICA__c.field-meta.xml
<CustomField>
    <fullName>X_DT_VERIFICA__c</fullName>
    <description>X_DT_VERIFICA</description>
    <externalDeveloperName>X_DT_VERIFICA</externalDeveloperName>
    <label>Data Verifica</label>
    <type>DateTime</type>
</CustomField>