force-app/main/default/objects/SiebelRdo__x/fields/X_FAM_6_9__c.field-meta.xml
<CustomField>
    <fullName>X_FAM_6_9__c</fullName>
    <description>X_FAM_6_9</description>
    <externalDeveloperName>X_FAM_6_9</externalDeveloperName>
    <label>Nuclei Fam 6-9</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>