force-app/main/default/objects/SiebelRdo__x/fields/X_FASCIA_10__c.field-meta.xml
<CustomField>
    <fullName>X_FASCIA_10__c</fullName>
    <description>X_FASCIA_10</description>
    <externalDeveloperName>X_FASCIA_10</externalDeveloperName>
    <label>Fascia 10</label>
    <length>2</length>
    <type>Text</type>
</CustomField>