force-app/main/default/objects/SiebelRdo__x/fields/X_FASCIA_4__c.field-meta.xml
<CustomField>
    <fullName>X_FASCIA_4__c</fullName>
    <description>X_FASCIA_4</description>
    <externalDeveloperName>X_FASCIA_4</externalDeveloperName>
    <label>Fascia 4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>