force-app/main/default/objects/SiebelRdo__x/fields/X_FASCIA_5__c.field-meta.xml
<CustomField>
    <fullName>X_FASCIA_5__c</fullName>
    <description>X_FASCIA_5</description>
    <externalDeveloperName>X_FASCIA_5</externalDeveloperName>
    <label>Fascia 5</label>
    <length>2</length>
    <type>Text</type>
</CustomField>