force-app/main/default/objects/SiebelRdo__x/fields/X_FASE__c.field-meta.xml
<CustomField>
    <fullName>X_FASE__c</fullName>
    <description>X_FASE</description>
    <externalDeveloperName>X_FASE</externalDeveloperName>
    <label>Fase</label>
    <length>30</length>
    <type>Text</type>
</CustomField>