force-app/main/default/objects/SiebelRdo__x/fields/X_FASE_ATTR__c.field-meta.xml
<CustomField>
    <fullName>X_FASE_ATTR__c</fullName>
    <description>X_FASE_ATTR</description>
    <externalDeveloperName>X_FASE_ATTR</externalDeveloperName>
    <label>Fase Attr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>