force-app/main/default/objects/SiebelRdo__x/fields/X_FLAG__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG__c</fullName>
    <description>X_FLAG</description>
    <externalDeveloperName>X_FLAG</externalDeveloperName>
    <label>Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>