force-app/main/default/objects/SiebelRdo__x/fields/X_FLAG_INVIO_SDD__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG_INVIO_SDD__c</fullName>
    <description>X_FLAG_INVIO_SDD</description>
    <externalDeveloperName>X_FLAG_INVIO_SDD</externalDeveloperName>
    <label>Flag Invio SDD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>