force-app/main/default/objects/SiebelRdo__x/fields/X_FLAG_OFF_PROG__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG_OFF_PROG__c</fullName>
    <description>X_FLAG_OFF_PROG</description>
    <externalDeveloperName>X_FLAG_OFF_PROG</externalDeveloperName>
    <label>Flag Offerta Progetto</label>
    <length>1</length>
    <type>Text</type>
</CustomField>