force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_ALTERN_B4__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_ALTERN_B4__c</fullName>
    <description>X_FLG_ALTERN_B4</description>
    <externalDeveloperName>X_FLG_ALTERN_B4</externalDeveloperName>
    <label>Flag Altern Bidone 4</label>
    <length>1</length>
    <type>Text</type>
</CustomField>