force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_ALTERN_B5__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_ALTERN_B5__c</fullName>
    <description>X_FLG_ALTERN_B5</description>
    <externalDeveloperName>X_FLG_ALTERN_B5</externalDeveloperName>
    <label>Flag Altern Bidone 5</label>
    <length>1</length>
    <type>Text</type>
</CustomField>