force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_ALTERN_S3__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_ALTERN_S3__c</fullName>
    <description>X_FLG_ALTERN_S3</description>
    <externalDeveloperName>X_FLG_ALTERN_S3</externalDeveloperName>
    <label>Flag Altern Sacco 3</label>
    <length>1</length>
    <type>Text</type>
</CustomField>