force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_DOT_MAGGIORE__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_DOT_MAGGIORE__c</fullName>
    <description>X_FLG_DOT_MAGGIORE</description>
    <externalDeveloperName>X_FLG_DOT_MAGGIORE</externalDeveloperName>
    <label>Flag Dot Mag TCP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>