force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_INIT_PRATICA__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_INIT_PRATICA__c</fullName>
    <description>X_FLG_INIT_PRATICA</description>
    <externalDeveloperName>X_FLG_INIT_PRATICA</externalDeveloperName>
    <label>Flag Init Pratica</label>
    <length>1</length>
    <type>Text</type>
</CustomField>