force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_RINN_PLACET__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_RINN_PLACET__c</fullName>
    <description>X_FLG_RINN_PLACET</description>
    <externalDeveloperName>X_FLG_RINN_PLACET</externalDeveloperName>
    <label>Flag Rinnovo Placet</label>
    <length>1</length>
    <type>Text</type>
</CustomField>