force-app/main/default/objects/SiebelRdo__x/fields/X_FLG_SEND_26__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_SEND_26__c</fullName>
    <description>X_FLG_SEND_26</description>
    <externalDeveloperName>X_FLG_SEND_26</externalDeveloperName>
    <label>CP Invio attributi OC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>