force-app/main/default/objects/SiebelRdo__x/fields/X_FORFAIT__c.field-meta.xml
<CustomField>
    <fullName>X_FORFAIT__c</fullName>
    <description>X_FORFAIT</description>
    <externalDeveloperName>X_FORFAIT</externalDeveloperName>
    <label>MCForfait Annuale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>