force-app/main/default/objects/SiebelRdo__x/fields/X_GIORNI_UTILIZZO__c.field-meta.xml
<CustomField>
    <fullName>X_GIORNI_UTILIZZO__c</fullName>
    <description>X_GIORNI_UTILIZZO</description>
    <externalDeveloperName>X_GIORNI_UTILIZZO</externalDeveloperName>
    <label>Giorni Utilizzo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>