force-app/main/default/objects/SiebelRdo__x/fields/X_GR_MIS_INT__c.field-meta.xml
<CustomField>
    <fullName>X_GR_MIS_INT__c</fullName>
    <description>X_GR_MIS_INT</description>
    <externalDeveloperName>X_GR_MIS_INT</externalDeveloperName>
    <label>Gr Mis Int</label>
    <length>50</length>
    <type>Text</type>
</CustomField>