force-app/main/default/objects/SiebelRdo__x/fields/X_GRAD__c.field-meta.xml
<CustomField>
    <fullName>X_GRAD__c</fullName>
    <description>X_GRAD</description>
    <externalDeveloperName>X_GRAD</externalDeveloperName>
    <label>GRAD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>