force-app/main/default/objects/SiebelRdo__x/fields/X_GRUPPO_CREATORE_USER__c.field-meta.xml
<CustomField>
    <fullName>X_GRUPPO_CREATORE_USER__c</fullName>
    <description>X_GRUPPO_CREATORE_USER</description>
    <externalDeveloperName>X_GRUPPO_CREATORE_USER</externalDeveloperName>
    <label>Gruppo Creatore Utente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>