force-app/main/default/objects/SiebelRdo__x/fields/X_GST_RET__c.field-meta.xml
<CustomField>
    <fullName>X_GST_RET__c</fullName>
    <description>X_GST_RET</description>
    <externalDeveloperName>X_GST_RET</externalDeveloperName>
    <label>Gestore Rete</label>
    <length>30</length>
    <type>Text</type>
</CustomField>