force-app/main/default/objects/SiebelRdo__x/fields/X_HER_OFFERTA_COMM__c.field-meta.xml
<CustomField>
    <fullName>X_HER_OFFERTA_COMM__c</fullName>
    <description>X_HER_OFFERTA_COMM</description>
    <externalDeveloperName>X_HER_OFFERTA_COMM</externalDeveloperName>
    <label>Offerta Commerciale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>