force-app/main/default/objects/SiebelRdo__x/fields/X_I0__c.field-meta.xml
<CustomField>
    <fullName>X_I0__c</fullName>
    <description>X_I0</description>
    <externalDeveloperName>X_I0</externalDeveloperName>
    <label>Tipo Indice Gas</label>
    <length>30</length>
    <type>Text</type>
</CustomField>