force-app/main/default/objects/SiebelRdo__x/fields/X_ID_BENEF__c.field-meta.xml
<CustomField>
    <fullName>X_ID_BENEF__c</fullName>
    <description>X_ID_BENEF</description>
    <externalDeveloperName>X_ID_BENEF</externalDeveloperName>
    <label>Id Beneficiario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>