force-app/main/default/objects/SiebelRdo__x/fields/X_ID_DOCUMENTALE__c.field-meta.xml
<CustomField>
    <fullName>X_ID_DOCUMENTALE__c</fullName>
    <description>X_ID_DOCUMENTALE</description>
    <externalDeveloperName>X_ID_DOCUMENTALE</externalDeveloperName>
    <label>Id Documentale</label>
    <length>200</length>
    <type>Text</type>
</CustomField>