force-app/main/default/objects/SiebelRdo__x/fields/X_ID_PLICO__c.field-meta.xml
<CustomField>
    <fullName>X_ID_PLICO__c</fullName>
    <description>X_ID_PLICO</description>
    <externalDeveloperName>X_ID_PLICO</externalDeveloperName>
    <label>CXD Id Plico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>