force-app/main/default/objects/SiebelRdo__x/fields/X_ID_PRATICA_SAP_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_ID_PRATICA_SAP_TARI__c</fullName>
    <description>X_ID_PRATICA_SAP_TARI</description>
    <externalDeveloperName>X_ID_PRATICA_SAP_TARI</externalDeveloperName>
    <label>ID pratica SAP TARI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>