force-app/main/default/objects/SiebelRdo__x/fields/X_ID_SOTTOSCR_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_ID_SOTTOSCR_TARI__c</fullName>
    <description>X_ID_SOTTOSCR_TARI</description>
    <externalDeveloperName>X_ID_SOTTOSCR_TARI</externalDeveloperName>
    <label>TARI Id Sottoscrittore</label>
    <length>15</length>
    <type>Text</type>
</CustomField>