force-app/main/default/objects/SiebelRdo__x/fields/X_IMMEDIATA_SOST_MISURAT__c.field-meta.xml
<CustomField>
    <fullName>X_IMMEDIATA_SOST_MISURAT__c</fullName>
    <description>X_IMMEDIATA_SOST_MISURAT</description>
    <externalDeveloperName>X_IMMEDIATA_SOST_MISURAT</externalDeveloperName>
    <label>Immediata Sost Misuratore</label>
    <length>30</length>
    <type>Text</type>
</CustomField>