force-app/main/default/objects/SiebelRdo__x/fields/X_IMPONIBILE_IVA__c.field-meta.xml
<CustomField>
    <fullName>X_IMPONIBILE_IVA__c</fullName>
    <description>X_IMPONIBILE_IVA</description>
    <externalDeveloperName>X_IMPONIBILE_IVA</externalDeveloperName>
    <label>Imponibile IVA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>