force-app/main/default/objects/SiebelRdo__x/fields/X_IMPORTO_DIRITTI_FISSI__c.field-meta.xml
<CustomField>
    <fullName>X_IMPORTO_DIRITTI_FISSI__c</fullName>
    <description>X_IMPORTO_DIRITTI_FISSI</description>
    <externalDeveloperName>X_IMPORTO_DIRITTI_FISSI</externalDeveloperName>
    <label>Importo Diritti Fissi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>