force-app/main/default/objects/SiebelRdo__x/fields/X_IMPORTO_PREV_RAPIDO__c.field-meta.xml
<CustomField>
    <fullName>X_IMPORTO_PREV_RAPIDO__c</fullName>
    <description>X_IMPORTO_PREV_RAPIDO</description>
    <externalDeveloperName>X_IMPORTO_PREV_RAPIDO</externalDeveloperName>
    <label>Importo Prev Rapido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>