force-app/main/default/objects/SiebelRdo__x/fields/X_IMPORTO_PREVENTIVO__c.field-meta.xml
<CustomField>
    <fullName>X_IMPORTO_PREVENTIVO__c</fullName>
    <description>X_IMPORTO_PREVENTIVO</description>
    <externalDeveloperName>X_IMPORTO_PREVENTIVO</externalDeveloperName>
    <label>Importo Preventivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>