force-app/main/default/objects/SiebelRdo__x/fields/X_INDICE2_PUN__c.field-meta.xml
<CustomField>
    <fullName>X_INDICE2_PUN__c</fullName>
    <description>X_INDICE2_PUN</description>
    <externalDeveloperName>X_INDICE2_PUN</externalDeveloperName>
    <label>Indice puntatore 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>