force-app/main/default/objects/SiebelRdo__x/fields/X_INDIRIZZO__c.field-meta.xml
<CustomField>
    <fullName>X_INDIRIZZO__c</fullName>
    <description>X_INDIRIZZO</description>
    <externalDeveloperName>X_INDIRIZZO</externalDeveloperName>
    <label>Indirizzo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>