force-app/main/default/objects/SiebelRdo__x/fields/X_INFO_AGG_FLAG__c.field-meta.xml
<CustomField>
    <fullName>X_INFO_AGG_FLAG__c</fullName>
    <description>X_INFO_AGG_FLAG</description>
    <externalDeveloperName>X_INFO_AGG_FLAG</externalDeveloperName>
    <label>D313 Info Aggiuntive Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>