force-app/main/default/objects/SiebelRdo__x/fields/X_INFO_CDR__c.field-meta.xml
<CustomField>
    <fullName>X_INFO_CDR__c</fullName>
    <description>X_INFO_CDR</description>
    <externalDeveloperName>X_INFO_CDR</externalDeveloperName>
    <label>Info CDR</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>