force-app/main/default/objects/SiebelRdo__x/fields/X_IVA_UDB__c.field-meta.xml
<CustomField>
    <fullName>X_IVA_UDB__c</fullName>
    <description>X_IVA_UDB</description>
    <externalDeveloperName>X_IVA_UDB</externalDeveloperName>
    <label>Iva Udb</label>
    <length>16</length>
    <type>Text</type>
</CustomField>