force-app/main/default/objects/SiebelRdo__x/fields/X_K_ATTIVA__c.field-meta.xml
<CustomField>
    <fullName>X_K_ATTIVA__c</fullName>
    <description>X_K_ATTIVA</description>
    <externalDeveloperName>X_K_ATTIVA</externalDeveloperName>
    <label>K Attiva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>