force-app/main/default/objects/SiebelRdo__x/fields/X_K_REATTIVA__c.field-meta.xml
<CustomField>
    <fullName>X_K_REATTIVA__c</fullName>
    <description>X_K_REATTIVA</description>
    <externalDeveloperName>X_K_REATTIVA</externalDeveloperName>
    <label>K Reattiva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>