force-app/main/default/objects/SiebelRdo__x/fields/X_K_TVO__c.field-meta.xml
<CustomField>
    <fullName>X_K_TVO__c</fullName>
    <description>X_K_TVO</description>
    <externalDeveloperName>X_K_TVO</externalDeveloperName>
    <label>K TVO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>