force-app/main/default/objects/SiebelRdo__x/fields/X_LETTURA_1__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_1__c</fullName>
    <description>X_LETTURA_1</description>
    <externalDeveloperName>X_LETTURA_1</externalDeveloperName>
    <label>Lettura 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>