force-app/main/default/objects/SiebelRdo__x/fields/X_LETTURA_7__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_7__c</fullName>
    <description>X_LETTURA_7</description>
    <externalDeveloperName>X_LETTURA_7</externalDeveloperName>
    <label>Lettura 7</label>
    <length>32</length>
    <type>Text</type>
</CustomField>