force-app/main/default/objects/SiebelRdo__x/fields/X_LETTURA_8__c.field-meta.xml
<CustomField>
    <fullName>X_LETTURA_8__c</fullName>
    <description>X_LETTURA_8</description>
    <externalDeveloperName>X_LETTURA_8</externalDeveloperName>
    <label>Lettura 8</label>
    <length>32</length>
    <type>Text</type>
</CustomField>