force-app/main/default/objects/SiebelRdo__x/fields/X_LINE_CD__c.field-meta.xml
<CustomField>
    <fullName>X_LINE_CD__c</fullName>
    <label>POD/PDR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>