force-app/main/default/objects/SiebelRdo__x/fields/X_LOCAL_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>X_LOCAL_GEST_CAL__c</fullName>
    <description>X_LOCAL_GEST_CAL</description>
    <externalDeveloperName>X_LOCAL_GEST_CAL</externalDeveloperName>
    <label>Localita Gest Calore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>