force-app/main/default/objects/SiebelRdo__x/fields/X_LOCALITA_REMI__c.field-meta.xml
<CustomField>
    <fullName>X_LOCALITA_REMI__c</fullName>
    <description>X_LOCALITA_REMI</description>
    <externalDeveloperName>X_LOCALITA_REMI</externalDeveloperName>
    <label>Località REMI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>