force-app/main/default/objects/SiebelRdo__x/fields/X_LST_CREDITO__c.field-meta.xml
<CustomField>
    <fullName>X_LST_CREDITO__c</fullName>
    <description>X_LST_CREDITO</description>
    <externalDeveloperName>X_LST_CREDITO</externalDeveloperName>
    <label>ORI Last Stato Credito</label>
    <length>30</length>
    <type>Text</type>
</CustomField>