force-app/main/default/objects/SiebelRdo__x/fields/X_MARCATURA_C_GAS__c.field-meta.xml
<CustomField>
    <fullName>X_MARCATURA_C_GAS__c</fullName>
    <description>X_MARCATURA_C_GAS</description>
    <externalDeveloperName>X_MARCATURA_C_GAS</externalDeveloperName>
    <label>Marcatura C Gas</label>
    <length>30</length>
    <type>Text</type>
</CustomField>