force-app/main/default/objects/SiebelRdo__x/fields/X_MARCATURA_DL__c.field-meta.xml
<CustomField>
    <fullName>X_MARCATURA_DL__c</fullName>
    <description>X_MARCATURA_DL</description>
    <externalDeveloperName>X_MARCATURA_DL</externalDeveloperName>
    <label>Marcatura DL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>