force-app/main/default/objects/SiebelRdo__x/fields/X_MATRICOLA_2__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_2__c</fullName>
    <description>X_MATRICOLA_2</description>
    <externalDeveloperName>X_MATRICOLA_2</externalDeveloperName>
    <label>Matricola 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>