force-app/main/default/objects/SiebelRdo__x/fields/X_MATRICOLA_5__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_5__c</fullName>
    <description>X_MATRICOLA_5</description>
    <externalDeveloperName>X_MATRICOLA_5</externalDeveloperName>
    <label>Matricola 5</label>
    <length>18</length>
    <type>Text</type>
</CustomField>