force-app/main/default/objects/SiebelRdo__x/fields/X_MATRICOLA_REATTIVA__c.field-meta.xml
<CustomField>
    <fullName>X_MATRICOLA_REATTIVA__c</fullName>
    <description>X_MATRICOLA_REATTIVA</description>
    <externalDeveloperName>X_MATRICOLA_REATTIVA</externalDeveloperName>
    <label>Matricola Reattiva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>