force-app/main/default/objects/SiebelRdo__x/fields/X_MAX_PREL_ORA__c.field-meta.xml
<CustomField>
    <fullName>X_MAX_PREL_ORA__c</fullName>
    <description>X_MAX_PREL_ORA</description>
    <externalDeveloperName>X_MAX_PREL_ORA</externalDeveloperName>
    <label>Max Prel Ora</label>
    <length>50</length>
    <type>Text</type>
</CustomField>