force-app/main/default/objects/SiebelRdo__x/fields/X_MERC_PROV_RES__c.field-meta.xml
<CustomField>
    <fullName>X_MERC_PROV_RES__c</fullName>
    <description>X_MERC_PROV_RES</description>
    <externalDeveloperName>X_MERC_PROV_RES</externalDeveloperName>
    <label>Mercato Provenienza RES</label>
    <length>30</length>
    <type>Text</type>
</CustomField>