force-app/main/default/objects/SiebelRdo__x/fields/X_MERCATO__c.field-meta.xml
<CustomField>
    <fullName>X_MERCATO__c</fullName>
    <description>X_MERCATO</description>
    <externalDeveloperName>X_MERCATO</externalDeveloperName>
    <label>Tipo Mercato</label>
    <length>30</length>
    <type>Text</type>
</CustomField>