force-app/main/default/objects/SiebelRdo__x/fields/X_METER_CD__c.field-meta.xml
<CustomField>
    <fullName>X_METER_CD__c</fullName>
    <description>X_METER_CD</description>
    <externalDeveloperName>X_METER_CD</externalDeveloperName>
    <label>Matricola</label>
    <length>30</length>
    <type>Text</type>
</CustomField>