force-app/main/default/objects/SiebelRdo__x/fields/X_MFORFAIT__c.field-meta.xml
<CustomField>
    <fullName>X_MFORFAIT__c</fullName>
    <description>X_MFORFAIT</description>
    <externalDeveloperName>X_MFORFAIT</externalDeveloperName>
    <label>M3Forfait Scarico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>