force-app/main/default/objects/SiebelRdo__x/fields/X_MGF_DATE__c.field-meta.xml
<CustomField>
    <fullName>X_MGF_DATE__c</fullName>
    <description>X_MGF_DATE</description>
    <externalDeveloperName>X_MGF_DATE</externalDeveloperName>
    <label>Mfg Date</label>
    <type>DateTime</type>
</CustomField>