force-app/main/default/objects/SiebelRdo__x/fields/X_MOD_ARCHIVIATO_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_MOD_ARCHIVIATO_TARI__c</fullName>
    <description>X_MOD_ARCHIVIATO_TARI</description>
    <externalDeveloperName>X_MOD_ARCHIVIATO_TARI</externalDeveloperName>
    <label>TARI Mod Archiviato Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>