force-app/main/default/objects/SiebelRdo__x/fields/X_MOD_INVIO_CONTR__c.field-meta.xml
<CustomField>
    <fullName>X_MOD_INVIO_CONTR__c</fullName>
    <description>X_MOD_INVIO_CONTR</description>
    <externalDeveloperName>X_MOD_INVIO_CONTR</externalDeveloperName>
    <label>Mod Invio Contratto Reitek</label>
    <length>30</length>
    <type>Text</type>
</CustomField>