force-app/main/default/objects/SiebelRdo__x/fields/X_MODELLO_RATA_UNICA__c.field-meta.xml
<CustomField>
    <fullName>X_MODELLO_RATA_UNICA__c</fullName>
    <description>X_MODELLO_RATA_UNICA</description>
    <externalDeveloperName>X_MODELLO_RATA_UNICA</externalDeveloperName>
    <label>TARI Modello Rata Unica</label>
    <length>30</length>
    <type>Text</type>
</CustomField>