force-app/main/default/objects/SiebelRdo__x/fields/X_MOTIVO_RICHIESTA_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_MOTIVO_RICHIESTA_TARI__c</fullName>
    <description>X_MOTIVO_RICHIESTA_TARI</description>
    <externalDeveloperName>X_MOTIVO_RICHIESTA_TARI</externalDeveloperName>
    <label>TARI Motivo Richiesta</label>
    <length>250</length>
    <type>Text</type>
</CustomField>