force-app/main/default/objects/SiebelRdo__x/fields/X_N_COMP_FAMIGLIA__c.field-meta.xml
<CustomField>
    <fullName>X_N_COMP_FAMIGLIA__c</fullName>
    <description>X_N_COMP_FAMIGLIA</description>
    <externalDeveloperName>X_N_COMP_FAMIGLIA</externalDeveloperName>
    <label>N Comp Fam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>