force-app/main/default/objects/SiebelRdo__x/fields/X_N_PTI_DA_CONN__c.field-meta.xml
<CustomField>
    <fullName>X_N_PTI_DA_CONN__c</fullName>
    <description>X_N_PTI_DA_CONN</description>
    <externalDeveloperName>X_N_PTI_DA_CONN</externalDeveloperName>
    <label>Numero Punti da connettere</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>