force-app/main/default/objects/SiebelRdo__x/fields/X_NOME_GEST_CALORE__c.field-meta.xml
<CustomField>
    <fullName>X_NOME_GEST_CALORE__c</fullName>
    <description>X_NOME_GEST_CALORE</description>
    <externalDeveloperName>X_NOME_GEST_CALORE</externalDeveloperName>
    <label>Nome Gestore Calore</label>
    <length>100</length>
    <type>Text</type>
</CustomField>