force-app/main/default/objects/SiebelRdo__x/fields/X_NOTE_ALLEGATI__c.field-meta.xml
<CustomField>
    <fullName>X_NOTE_ALLEGATI__c</fullName>
    <description>X_NOTE_ALLEGATI</description>
    <externalDeveloperName>X_NOTE_ALLEGATI</externalDeveloperName>
    <label>Note Allegati</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>