force-app/main/default/objects/SiebelRdo__x/fields/X_NOTE_COMPL_RIMBORSO_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_NOTE_COMPL_RIMBORSO_TARI__c</fullName>
    <description>X_NOTE_COMPL_RIMBORSO_TARI</description>
    <externalDeveloperName>X_NOTE_COMPL_RIMBORSO_TARI</externalDeveloperName>
    <label>TARI Note Complemento Rimborso</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>