force-app/main/default/objects/SiebelRdo__x/fields/X_NOTE_DISTRIBUTORE__c.field-meta.xml
<CustomField>
    <fullName>X_NOTE_DISTRIBUTORE__c</fullName>
    <description>X_NOTE_DISTRIBUTORE</description>
    <externalDeveloperName>X_NOTE_DISTRIBUTORE</externalDeveloperName>
    <label>Note distributore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>