force-app/main/default/objects/SiebelRdo__x/fields/X_NOTE_STAMPA_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_NOTE_STAMPA_TARI__c</fullName>
    <description>X_NOTE_STAMPA_TARI</description>
    <externalDeveloperName>X_NOTE_STAMPA_TARI</externalDeveloperName>
    <label>TARI Note Stampa</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>