force-app/main/default/objects/SiebelRdo__x/fields/X_NUM_BAMBINI_1__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_BAMBINI_1__c</fullName>
    <description>X_NUM_BAMBINI_1</description>
    <externalDeveloperName>X_NUM_BAMBINI_1</externalDeveloperName>
    <label>Num Bambini 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>