force-app/main/default/objects/SiebelRdo__x/fields/X_NUM_DOM_TCP__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_DOM_TCP__c</fullName>
    <description>X_NUM_DOM_TCP</description>
    <externalDeveloperName>X_NUM_DOM_TCP</externalDeveloperName>
    <label>Numero domiciliati TCP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>