force-app/main/default/objects/SiebelRdo__x/fields/X_NUM_TESSERA_2__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_TESSERA_2__c</fullName>
    <description>X_NUM_TESSERA_2</description>
    <externalDeveloperName>X_NUM_TESSERA_2</externalDeveloperName>
    <label>Tessera Key TCP 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>