force-app/main/default/objects/SiebelRdo__x/fields/X_NUM_TESSERA_RIT_1__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_TESSERA_RIT_1__c</fullName>
    <description>X_NUM_TESSERA_RIT_1</description>
    <externalDeveloperName>X_NUM_TESSERA_RIT_1</externalDeveloperName>
    <label>Tess Key Ritirata 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>