force-app/main/default/objects/SiebelRdo__x/fields/X_NUM_TESSERA_RIT_2__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_TESSERA_RIT_2__c</fullName>
    <description>X_NUM_TESSERA_RIT_2</description>
    <externalDeveloperName>X_NUM_TESSERA_RIT_2</externalDeveloperName>
    <label>Tess Key Ritirata 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>