force-app/main/default/objects/SiebelRdo__x/fields/X_NUM_UNITA_IMM__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_UNITA_IMM__c</fullName>
    <description>X_NUM_UNITA_IMM</description>
    <externalDeveloperName>X_NUM_UNITA_IMM</externalDeveloperName>
    <label>Num Unita Imm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>