force-app/main/default/objects/SiebelRdo__x/fields/X_OFFERTA_OP_FLG__c.field-meta.xml
<CustomField>
    <fullName>X_OFFERTA_OP_FLG__c</fullName>
    <description>X_OFFERTA_OP_FLG</description>
    <externalDeveloperName>X_OFFERTA_OP_FLG</externalDeveloperName>
    <label>Offerta Operatore</label>
    <length>1</length>
    <type>Text</type>
</CustomField>