force-app/main/default/objects/SiebelRdo__x/fields/X_ORIGINE_PROCESSO__c.field-meta.xml
<CustomField>
    <fullName>X_ORIGINE_PROCESSO__c</fullName>
    <description>X_ORIGINE_PROCESSO</description>
    <externalDeveloperName>X_ORIGINE_PROCESSO</externalDeveloperName>
    <label>Origine Processo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>