force-app/main/default/objects/SiebelRdo__x/fields/X_P0__c.field-meta.xml
<CustomField>
    <fullName>X_P0__c</fullName>
    <description>X_P0</description>
    <externalDeveloperName>X_P0</externalDeveloperName>
    <label>p0 (€/MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>