force-app/main/default/objects/SiebelRdo__x/fields/X_P0_I__c.field-meta.xml
<CustomField>
    <fullName>X_P0_I__c</fullName>
    <description>X_P0_I</description>
    <externalDeveloperName>X_P0_I</externalDeveloperName>
    <label>P0 Inverno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>